# destiny2-auto-fishing

./: .gitignore  build.ps1  changelog.md  fisher.py  license.md  license.txt  main.py  pyproject.toml  readme.md  requirements.txt  setup.cfg
d2autofishing/: __main__.py  anti_afk.py  controls.py  fisher.py  functions.py
d2autofishing/methods/: base.py
d2autofishing/methods/image/: __init__.py  __main__.py
destiny2autofishing/: __init__.py  __main__.py  anti_afk.py  configurator.py  controls.py  fisher.py  functions.py  run.py
destiny2autofishing/methods/: __init__.py  base.py
destiny2autofishing/methods/image/: __init__.py  __main__.py
destiny2autofishing/predefined/: 1920x1080-E-english.toml  1920x1080-E-russian.toml  2560x1440-E-english.toml  __init__.py
exe/: .gitignore  build-exe.ps1  main.py  make_version_info.py  make_zip.py
methods/: base.py  controls.py
methods/image/: __init__.py  __main__.py  functions.py
methods/image/predefined/: __init__.py  localizations.py
predefined/image/: keys.py  localizations.py
resources/: config-guide.md
