[metadata]
name = destiny2autofishing
version = attr: destiny2autofishing.version
license = MIT License
license_files = license.txt
description = A tool for automatic fishing in Destiny 2
platforms = Windows
download_url = https://github.com/Prometheus3375/destiny2-auto-fishing/releases
long_description = file: readme.md, changelog.md, license.md
long_description_content_type = text/markdown
author = Prometheus3375
author_email = prometheus3375@gmail.com
project_urls =
    "Homepage"="https://github.com/Prometheus3375/destiny2-auto-fishing"
    "Bug tracker"="https://github.com/Prometheus3375/destiny2-auto-fishing/issues"

keywords =
    macros
    script
    destiny2
    destiny-2
    destiny-2-script
    fishing

classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Topic :: Games/Entertainment :: First Person Shooters
    Typing :: Typed

[options]
; What zip_safe flag means https://setuptools.pypa.io/en/latest/deprecated/zip_safe.html
zip_safe = False
packages = find:
python_requires = ~= 3.11.4
install_requires = file: requirements.txt

[options.packages.find]
where = .
include = destiny2autofishing*

[options.package_data]
destiny2autofishing.predefined =
    *.png
    *.toml
